packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-005-entity-unbound.ttrp
// expect: TTRP-RES-005
import erp.er.*
container c target polars {
    p = load(product)
}
